add correct url

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://repo.github.io/src/index/index.html">
+<meta http-equiv="refresh" content="0; url=https://scorpio.peekembrace.com/src/app/index.html">
