project fixes and client fixes

--- a/index.html
+++ b/index.html
@@ -517,18 +517,18 @@
             <article>
               <p>MON - THU</p>
               <hr />
-              <p>8:30 - 5:00</p>
+              <p>8:30 - 17:00</p>
             </article>
 
             <article>
               <p>FRI</p>
               <hr />
-              <p>8:30 - 4:00</p>
+              <p>8:30 - 16:00</p>
             </article>
             <article class="desktop">
               <p>SAT</p>
               <hr />
-              <p>9:00 - 1:00</p>
+              <p>9:00 - 13:00</p>
             </article>
           </section>
           <article class="second-row">
@@ -799,9 +799,9 @@
                   by finding the serial code located somewhere on the bike and
                   putting it into the police website.
 
-                  <a href="https://politi.dk/" target="_blank" rel="noopener">
-                    https://politi.dk/</a
-                  >
+                  <a href="https://politi.dk/cykler-og-koeretoejer/tjek-om-en-cykel-eller-et-koeretoej-er-efterlyst/tjek-om-en-cykel-er-efterlyst" target="_blank" rel="noopener">
+                    Check here
+                  </a>
                 </span>
               </span>
             </p>
@@ -852,19 +852,19 @@
           <article>
             <p>MON - THU</p>
             <hr />
-            <p>8:30 - 5:00</p>
+            <p>8:30 - 17:00</p>
           </article>
 
           <article>
             <p>FRI</p>
             <hr />
-            <p>8:30 - 4:00</p>
+            <p>8:30 - 16:00</p>
           </article>
 
           <article>
             <p>SAT</p>
             <hr />
-            <p>9:00 - 1:00</p>
+            <p>9:00 - 13:00</p>
           </article>
         </section>
 
