--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Scorpio Bike Website for repairing, buying and selling bikes."
+      content="Scorpio Bike can repair your bike for an affordable price. He can also buy your used bike if you don't need it anymore and you can even buy a renovated bike from him for a good low budget price."
     />
     <title>Scorpio Bike Repair Shop</title>
 
@@ -799,8 +799,12 @@
                   by finding the serial code located somewhere on the bike and
                   putting it into the police website.
 
-                  <a href="https://politi.dk/cykler-og-koeretoejer/tjek-om-en-cykel-eller-et-koeretoej-er-efterlyst/tjek-om-en-cykel-er-efterlyst" target="_blank" rel="noopener">
-                    Check here
+                  <a
+                    href="https://politi.dk/cykler-og-koeretoejer/tjek-om-en-cykel-eller-et-koeretoej-er-efterlyst/tjek-om-en-cykel-er-efterlyst"
+                    target="_blank"
+                    rel="noopener"
+                  >
+                    Check your bike number here
                   </a>
                 </span>
               </span>
