add meta keywords

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Scorpio Bike can repair your bike for an affordable price. He can also buy your used bike if you don't need it anymore and you can even buy a renovated bike from him for a good low budget price."
     />
+    <meta
+      name="keywords"
+      content="scorpio bike, bike repair, repair bikes, bike repair aarhus, bike mechanic, cykel reparation århus, bike workshop, fix bike,  cykelværksted århus, cykel reparation aarhus, cykelværksted, cykelmekaniker, cykelsmed, cykelmekaniker århus, cyklemekaniker, cykelsmed aarhus c"
+    />
     <title>Scorpio Bike Repair Shop</title>
 
     <!-- Add cookie consent css & js -->
