add absolute path

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Scorpio Bike Repair Shop</title>
 
     <!-- Add cookie consent css & js -->
-    <link rel="stylesheet" type="text/css" href="css/cookieconsent.min.css" />
-    <script src="scripts/cookieconsent.min.js" data-cfasync="false"></script>
+    <link rel="stylesheet" href="/css/cookieconsent.min.css" />
+    <script src="/scripts/cookieconsent.min.js" data-cfasync="false"></script>
 
     <!-- Add google analytics -->
     <script
@@ -104,24 +104,14 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="images/favicon/apple-touch-icon.png"
+      href="/images/favicon/apple-touch-icon.png"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="images/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="images/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="images/favicon/site.webmanifest" />
+    <link rel="icon" sizes="32x32" href="/images/favicon/favicon-32x32.png" />
+    <link rel="icon" sizes="16x16" href="/images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/images/favicon/site.webmanifest" />
 
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/swiper.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/swiper.css" />
   </head>
 
   <body>
@@ -479,21 +469,21 @@
 
       <section class="bike-wrapper bike-img">
         <img
-          src="images/back-tire.png"
+          src="/images/back-tire.png"
           alt="Bike back wheel"
           class="back-wheel"
           width="329"
           height="330"
         />
         <img
-          src="images/bike-frame.png"
+          src="/images/bike-frame.png"
           alt="The bike frame (no wheels)"
           class="bike-frame"
           width="530"
           height="424"
         />
         <img
-          src="images/front-tire.png"
+          src="/images/front-tire.png"
           alt="Bike front wheel"
           class="front-wheel"
           width="329"
@@ -505,7 +495,7 @@
         <img
           width="131"
           height="139"
-          src="./images/logo.png"
+          src="/images/logo.png"
           alt="A circular logo with wrenches and allen keys"
         />
         <h1 class="main-heading">
@@ -605,7 +595,7 @@
       <section class="find-us container">
         <img
           class="find-us-mesh"
-          src="images/mesh-mobile.png"
+          src="/images/mesh-mobile.png"
           alt="Mesh for mobile"
           width="367"
           height="189"
@@ -842,7 +832,7 @@
 
         <img
           class="our-clients-background"
-          src="images/heels.png"
+          src="/images/heels.png"
           alt="Heels illustration with yellow color pallet"
           width="1276"
           height="264"
@@ -853,7 +843,7 @@
     <footer class="container">
       <section class="first-part">
         <section class="logo-section">
-          <img width="131" height="139" src="./images/logo.png" alt="" />
+          <img width="131" height="139" src="/images/logo.png" alt="" />
         </section>
 
         <section class="working-hours">
@@ -995,8 +985,8 @@
       </section>
     </footer>
 
-    <script src="scripts/swiper.js"></script>
-    <script src="scripts/all.js"></script>
+    <script src="/scripts/swiper.js"></script>
+    <script src="/scripts/all.js"></script>
     <script
       async
       defer
