changed description text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="keywords"
       content="scorpio bike, bike repair, repair bikes, bike repair aarhus, bike mechanic, cykel reparation århus, bike workshop, fix bike,  cykelværksted århus, cykel reparation aarhus, cykelværksted, cykelmekaniker, cykelsmed, cykelmekaniker århus, cyklemekaniker, cykelsmed aarhus c"
     />
-    <title>Scorpio Bike Repair Shop</title>
+    <title>Scorpio Bike Repair Shop | Aarhus C</title>
 
     <!-- Add cookie consent css & js -->
     <link rel="stylesheet" href="/css/cookieconsent.min.css" />
