changed meta descirption

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Scorpio Bike can repair your bike for an affordable price. He can also buy your used bike if you don't need it anymore and you can even buy a renovated bike from him for a good low budget price."
+      content="Scorpio Bike is a bike repair shop in Aarhus C, who can repair your bike fast and cheap. He sells renovated used bikes at an affordable price."
     />
     <meta
       name="keywords"
