--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Scorpio Bike is a bike repair shop in Aarhus C, who can repair your bike fast and cheap. He sells renovated used bikes at an affordable price."
+      content="We will fix your old bicycle for a cheap price. We can buy your used bike or sell you a second hand one. We are the best bike dealer and repair shop in Aarhus."
     />
     <meta
       name="keywords"
-      content="scorpio bike, bike repair, repair bikes, bike repair aarhus, bike mechanic, cykel reparation århus, bike workshop, fix bike,  cykelværksted århus, cykel reparation aarhus, cykelværksted, cykelmekaniker, cykelsmed, cykelmekaniker århus, cyklemekaniker, cykelsmed aarhus c"
+      content="bike repair,bicycle fix aarhus,cycle reparation aarhus, cheap bike repair,sell used bike,buy second hand bike,electric bike repair,old cycle repair,bicycle repair shop,fixing bike gears,scorpio bike aarhus,sell my second hand bike,sell my bike,sell my used bike,buy my second hand bike,second hand bike for sale,used bikes for sale,cheap bikes for sale,used bike price,electric bike for sale"
     />
-    <title>Scorpio Bike Repair Shop | Aarhus C</title>
+    <title>
+      Bike Repair - Sell or Buy Second Hand Bike | Scorpio Bike Aarhus
+    </title>
 
     <!-- Add cookie consent css & js -->
     <link rel="stylesheet" href="/css/cookieconsent.min.css" />
@@ -502,10 +504,10 @@
           SCORPIO BIKE <br />
           <span class="yellow-part">REPAIR</span> SHOP
         </h1>
-        <p class="sub">
-          The <span class="yellow-part"> best </span> bike dealer and repairer
-          in Aarhus!
-        </p>
+        <h2 class="sub">
+          The <span class="yellow-part"> best </span> bike deals and services in
+          Aarhus!
+        </h2>
         <section class="working-hours">
           <section class="first-row">
             <article>
