--- a/index.html
+++ b/index.html
@@ -686,7 +686,8 @@
             <h2 class="service-title underline">Bike Repair</h2>
             <p class="service-about">
               Have your bike repaired and maintained by a professional for a
-              reasonable price
+              reasonable price. We can fix your bicycle fast and with 100% high
+              quality.
             </p>
           </section>
 
@@ -722,8 +723,8 @@
 
             <h2 class="service-title underline">Buy Second Hand</h2>
             <p class="service-about">
-              Find your perfect bike ready to go. The prices are low and the
-              quality is high
+              Find your second hand perfect bike ready to go. The prices are
+              cheap, and the quality is the best.
             </p>
           </section>
 
@@ -745,8 +746,9 @@
 
             <h2 class="service-title underline">Sell Second Hand</h2>
             <p class="service-about">
-              You don’t need your bike anymore? Let us buy it and find its new
-              owner
+              Want to sell your old bike? We will buy it from you, fix it, and
+              find its new owner. Don’t hesitate if you have a used bike that
+              you want to get rid of.
               <span class="service-about-popup">
                 <svg
                   class="service-about-popup-icon"
