--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
       src="https://www.googletagmanager.com/gtag/js?id=G-F154QCTQ80"
     ></script>
 
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != 'dataLayer' ? '&l=' + l : '';
+        j.async = true;
+        j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, 'script', 'dataLayer', 'GTM-56MSVJ5');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <script>
       // Reads the value of a cookie by name or returns empty string
       function getCookie(name) {
@@ -169,6 +184,17 @@
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-56MSVJ5"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <header class="main-header container">
       <svg
         class="mesh-image"
