add change language

--- a/en/index.html
+++ b/en/index.html
@@ -216,7 +216,7 @@
       </div>
 
       <ul class="languages">
-        <li data-lang="en"><a href="/en">EN</a></li>
+        <li data-lang="en" class="active"><a href="/en">EN</a></li>
         <li data-lang="dk"><a href="/dk">DK</a></li>
       </ul>
     </div>
