add logo to schema'

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         "@type": "ProfessionalService",
         "image": ["https://scorpiobike.dk/images/logo.png"],
         "name": "Scorpio Bike",
+        "logo": "https://scorpiobike.dk/images/logo.png",
         "address": {
           "@type": "PostalAddress",
           "streetAddress": "Fynsgade 6",
