--- a/en/index.html
+++ b/en/index.html
@@ -217,7 +217,7 @@
 
       <ul class="languages">
         <li data-lang="en" class="active"><a href="/en">EN</a></li>
-        <li data-lang="dk"><a href="/dk">DK</a></li>
+        <li data-lang="dk"><a href="/">DK</a></li>
       </ul>
     </div>
 
