--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="We will fix your old bicycle for a cheap price. We can buy your used bike or sell you a second hand one. We are the best bike dealer and repair shop in Aarhus."
+      content="Vi ordner din gamle cykel til en billig penge. Vi kan købe din brugte cykel eller sælge dig en brugt cykel. Vi er den bedste cykelhandler og værksted i Aarhus."
     />
     <meta
       name="keywords"
-      content="bike repair,bicycle fix aarhus,cycle reparation aarhus, cheap bike repair,sell used bike,buy second hand bike,electric bike repair,old cycle repair,bicycle repair shop,fixing bike gears,scorpio bike aarhus,sell my second hand bike,sell my bike,sell my used bike,buy my second hand bike,second hand bike for sale,used bikes for sale,cheap bikes for sale,used bike price,electric bike for sale"
+      content=" cykelreparation,cykelreparation aarhus,cykelreparation aarhus,billig cykelreparation,sælg brugt cykel,køb brugt cykel,elcykelreparation,gammel cykelreparation,cykelværksted,fixering af cykelgear,scorpio bike aarhus,sælg min brugte cykel, sælg min cykel,sælg min brugte cykel,køb min brugte cykel,brugt cykel til salg,brugte cykler til salg,billige cykler til salg,brugt cykel pris,elcykel til salg"
     />
     <title>
-      Bike Repair - Sell or Buy Second Hand Bike | Scorpio Bike Aarhus
+      Cykelreparation - Sælg og køb brugt cykel | Scorpio Bike Aarhus
     </title>
 
     <!-- Add cookie consent css & js -->
@@ -104,9 +104,12 @@
           },
           type: 'opt-out',
           content: {
-            allow: 'Approve',
-            dismiss: 'Approve',
-            deny: 'Reject',
+            allow: 'Acceptere',
+            dismiss: 'Acceptere',
+            deny: 'Afvise',
+            message:
+              'Denne hjemmeside bruger cookies for at sikre, at du får den bedste oplevelse på vores hjemmeside.',
+            link: 'Lær mere',
             href: '/policy.html',
           },
           onPopupOpen: function () {
@@ -197,7 +200,7 @@
 
     <div class="language-change">
       <div class="current-language">
-        <p id="lang">EN</p>
+        <p id="lang">DK</p>
 
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -217,7 +220,7 @@
 
       <ul class="languages">
         <li data-lang="en"><a href="/en">EN</a></li>
-        <li data-lang="dk"><a href="/dk">DK</a></li>
+        <li data-lang="dk" class="active"><a href="/">DK</a></li>
       </ul>
     </div>
 
@@ -605,34 +608,34 @@
           alt="A circular logo with wrenches and allen keys"
         />
         <h1 class="main-heading">
-          SCORPIO BIKE <br />
-          <span class="yellow-part">REPAIR</span> SHOP
+          SCORPIO<br />
+          <span class="yellow-part">Cykelværksted</span>
         </h1>
         <h2 class="sub">
-          The <span class="yellow-part"> best </span> bike deals and services in
+          De <span class="yellow-part">bedste</span> cykeltilbud og services i
           Aarhus!
         </h2>
         <section class="working-hours">
           <section class="first-row">
             <article>
-              <p>MON - THU</p>
+              <p>MA - TO</p>
               <hr />
               <p>8:30 - 17:00</p>
             </article>
 
             <article>
-              <p>FRI</p>
+              <p>FR</p>
               <hr />
               <p>8:30 - 16:00</p>
             </article>
             <article class="desktop">
-              <p>SAT</p>
+              <p>LØ</p>
               <hr />
               <p>9:00 - 13:00</p>
             </article>
           </section>
           <article class="second-row">
-            <p>SAT</p>
+            <p>LØ</p>
             <hr />
             <p>9:00 - 1:00</p>
           </article>
@@ -707,12 +710,12 @@
           height="189"
         />
 
-        <h1 class="find-us-title desktop">Find Us</h1>
+        <h1 class="find-us-title desktop">Find Os</h1>
 
         <section class="find-us-titles">
-          <h1 class="find-us-title mobile">Find Us</h1>
+          <h1 class="find-us-title mobile">Find Os</h1>
           <h2 class="find-us-subtitle">
-            You can visit on
+            Du kan besøge på
             <a
               href="https://g.page/ScorpioBike01?share"
               class="location"
@@ -763,7 +766,7 @@
                   </clipPath>
                 </defs>
               </svg> </i
-            >Get Directions
+            >Få vejledninger
           </a>
         </section>
 
@@ -793,11 +796,11 @@
               </svg>
             </section>
 
-            <h2 class="service-title underline">Bike Repair</h2>
+            <h2 class="service-title underline">Cykel reparation</h2>
             <p class="service-about">
-              Have your bike repaired and maintained by a professional for a
-              reasonable price. We can fix your bicycle fast and with 100% high
-              quality.
+              Få din cykel repareret og vedligeholdt af en professionel til en
+              rimelig pris. Vi kan reparere din cykel hurtigt og med 100% høj
+              kvalitet.
             </p>
           </section>
 
@@ -831,10 +834,10 @@
               </svg>
             </section>
 
-            <h2 class="service-title underline">Buy Second Hand</h2>
+            <h2 class="service-title underline">Køb brugt</h2>
             <p class="service-about">
-              Find your second hand perfect bike ready to go. The prices are
-              cheap, and the quality is the best.
+              Find din brugte perfekte cykel klar til brug. Priserne er billige,
+              og kvaliteten er den bedste.
             </p>
           </section>
 
@@ -854,11 +857,11 @@
               </svg>
             </section>
 
-            <h2 class="service-title underline">Sell Second Hand</h2>
+            <h2 class="service-title underline">Sælg brugt</h2>
             <p class="service-about">
-              Want to sell your old bike? We will buy it from you, fix it, and
-              find its new owner. Don’t hesitate if you have a used bike that
-              you want to get rid of.
+              Vil du sælge din gamle cykel? Vi køber den af dig, reparerer den
+              og finder dens nye ejer. Tøv ikke, hvis du har en brugt cykel, som
+              du gerne vil af med.
               <span class="service-about-popup">
                 <svg
                   class="service-about-popup-icon"
@@ -903,16 +906,16 @@
                     />
                   </svg>
 
-                  To sell a bike we need to know it is yours. You can check that
-                  by finding the serial code located somewhere on the bike and
-                  putting it into the police website.
+                  For at sælge en cykel skal vi vide, at den er din. Det kan du
+                  tjekke ved at finde seriekoden placeret et sted på cyklen og
+                  lægge den ind på politiets hjemmeside.
 
                   <a
                     href="https://politi.dk/cykler-og-koeretoejer/tjek-om-en-cykel-eller-et-koeretoej-er-efterlyst/tjek-om-en-cykel-er-efterlyst"
                     target="_blank"
                     rel="noopener"
                   >
-                    Check your bike number here
+                    Tjek dit cykelnummer her
                   </a>
                 </span>
               </span>
@@ -922,7 +925,7 @@
       </section>
 
       <section class="our-clients">
-        <h1 class="our-clients-title underline">Our clients</h1>
+        <h1 class="our-clients-title underline">Vores kunder</h1>
 
         <div class="reviews-loader">
           <div></div>
@@ -941,7 +944,7 @@
           class="base-button black-button our-clients-all-button"
           target="_blank"
           rel="noopener"
-          >Read All Reviews</a
+          >læs alle anmeldelser</a
         >
 
         <img
@@ -962,19 +965,19 @@
 
         <section class="working-hours">
           <article>
-            <p>MON - THU</p>
+            <p>MA - TO</p>
             <hr />
             <p>8:30 - 17:00</p>
           </article>
 
           <article>
-            <p>FRI</p>
+            <p>FR</p>
             <hr />
             <p>8:30 - 16:00</p>
           </article>
 
           <article>
-            <p>SAT</p>
+            <p>LØ</p>
             <hr />
             <p>9:00 - 13:00</p>
           </article>
@@ -1093,9 +1096,11 @@
 
         <!-- Make it copyright scorpibike and made by peekembrace -->
         <p class="copyright-text">
-          Copyright &copy; Scorpio Bike 2021<span id="copyright-year"></span>
+          Copyright &copy; Scorpio Cykelværksted 2021<span
+            id="copyright-year"
+          ></span>
         </p>
-        <p class="madeby-text">Made by PeekEmbrace</p>
+        <p class="madeby-text">Lavet af PeekEmbrace</p>
       </section>
     </footer>
     <script src="/scripts/swiper.js"></script>
