add peekembrace link and remove dk folder

--- a/en/index.html
+++ b/en/index.html
@@ -1095,7 +1095,9 @@
         <p class="copyright-text">
           Copyright &copy; Scorpio Bike 2021<span id="copyright-year"></span>
         </p>
-        <p class="madeby-text">Made by PeekEmbrace</p>
+        <p class="madeby-text">
+          Made by <a href="https://peekembrace.com/">PeekEmbrace</a>
+        </p>
       </section>
     </footer>
     <script src="/scripts/swiper.js"></script>
