--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,9 @@
             id="copyright-year"
           ></span>
         </p>
-        <p class="madeby-text">Lavet af PeekEmbrace</p>
+        <p class="madeby-text">
+          Lavet af <a href="https://peekembrace.com/">PeekEmbrace</a>
+        </p>
       </section>
     </footer>
     <script src="/scripts/swiper.js"></script>
