fix language changer active class

--- a/en/index.html
+++ b/en/index.html
@@ -215,7 +215,7 @@
         </svg>
       </div>
 
-      <ul class="languages">
+      <ul class="languages upper-active">
         <li data-lang="en" class="active"><a href="/en">EN</a></li>
         <li data-lang="dk"><a href="/">DK</a></li>
       </ul>
