--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
           src="/images/logo.png"
           alt="A circular logo with wrenches and allen keys"
         />
-        <h1 class="main-heading">
+        <h1 class="main-heading danish">
           SCORPIO<br />
           <span class="yellow-part">Cykelværksted</span>
         </h1>
@@ -778,7 +778,7 @@
       </section>
 
       <section class="services container">
-        <h1 class="services-title underline">Our Services</h1>
+        <h1 class="services-title underline">Vores Tjenester</h1>
 
         <article class="services-wrapper">
           <section class="service">
