fix possibly some seo problems and fix cookies removal

--- a/en/index.html
+++ b/en/index.html
@@ -15,6 +15,19 @@
       Bike Repair - Sell or Buy Second Hand Bike | Scorpio Bike Aarhus
     </title>
 
+    <meta
+      property="og:title"
+      content="Bike Repair - Sell or Buy Second Hand Bike | Scorpio Bike Aarhus"
+    />
+    <meta
+      property="og:description"
+      content="We will fix your old bicycle for a cheap price. We can buy your used bike or sell you a second hand one. We are the best bike dealer and repair shop in Aarhus."
+    />
+    <meta
+      property="og:image"
+      content="https://scorpiobike.dk/images/logo.png"
+    />
+
     <!-- Add cookie consent css & js -->
     <link rel="stylesheet" href="/css/cookieconsent.min.css" />
     <script src="/scripts/cookieconsent.min.js" data-cfasync="false"></script>
@@ -75,8 +88,8 @@
       function disableAnalytics() {
         window['ga-disable-G-F154QCTQ80'] = true;
 
-        deleteCookie('_ga', '/', '.peekembrace.com');
-        deleteCookie(`_ga_F154QCTQ80`, '/', '.peekembrace.com');
+        deleteCookie('_ga', '/', '.scorpiobike.dk');
+        deleteCookie(`_ga_F154QCTQ80`, '/', '.scorpiobike.dk');
       }
 
       // Waiting for the load event
