--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     />
     <meta
       name="keywords"
-      content=" cykelreparation,cykelreparation aarhus,cykelreparation aarhus,billig cykelreparation,sælg brugt cykel,køb brugt cykel,elcykelreparation,gammel cykelreparation,cykelværksted,fixering af cykelgear,scorpio bike aarhus,sælg min brugte cykel, sælg min cykel,sælg min brugte cykel,køb min brugte cykel,brugt cykel til salg,brugte cykler til salg,billige cykler til salg,brugt cykel pris,elcykel til salg"
+      content="cykelreparation,cykelreparation aarhus,cykelreparation aarhus,billig cykelreparation,sælg brugt cykel,køb brugt cykel,elcykelreparation,gammel cykelreparation,cykelværksted,fixering af cykelgear,scorpio bike aarhus,sælg min brugte cykel, sælg min cykel,sælg min brugte cykel,køb min brugte cykel,brugt cykel til salg,brugte cykler til salg,billige cykler til salg,brugt cykel pris,elcykel til salg"
     />
     <title>
       Cykelreparation - Sælg og køb brugt cykel | Scorpio Bike Aarhus
     </title>
+
+    <meta
+      property="og:title"
+      content="Cykelreparation - Sælg og køb brugt cykel | Scorpio Bike Aarhus"
+    />
+    <meta
+      property="og:description"
+      content="Vi ordner din gamle cykel til en billig penge. Vi kan købe din brugte cykel eller sælge dig en brugt cykel. Vi er den bedste cykelhandler og værksted i Aarhus."
+    />
+    <meta
+      property="og:image"
+      content="https://scorpiobike.dk/images/logo.png"
+    />
 
     <!-- Add cookie consent css & js -->
     <link rel="stylesheet" href="/css/cookieconsent.min.css" />
@@ -75,8 +88,8 @@
       function disableAnalytics() {
         window['ga-disable-G-F154QCTQ80'] = true;
 
-        deleteCookie('_ga', '/', '.peekembrace.com');
-        deleteCookie(`_ga_F154QCTQ80`, '/', '.peekembrace.com');
+        deleteCookie('_ga', '/', '.scorpiobike.dk');
+        deleteCookie(`_ga_F154QCTQ80`, '/', '.scorpiobike.dk');
       }
 
       // Waiting for the load event
